headlamp_parity_tests/tests/parity_support/tests/snapshots/runner_parity/parity_suite_test__parity_support__runner_parity__selection_prod_file_all_runners.snap
---
source: headlamp_parity_tests/tests/parity_support/runner_parity.rs
expression: canonical
---
[<N>;<N>;<N>;<N>;246m[97m RUN [39m[0m [2m<ROOT>[22m

[35mtests/sum_fail_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;35m×[0m [97mtest_sum_fails[39m

[<N>;<N>;<N>;<N>;35m[97m FAIL [39m[0m [97mtests/sum_fail_test.<EXT>[39m
[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/sum_pass_test.<EXT>[39m
[2m───────────────────────────────────────────────────────────────────────────────────────────────────────[22m [<N>;<N>;<N>;<N>;35m[97m Failed Tests <N> [39m[0m

[1mTest Files[22m [<N>;<N>;<N>;<N>;35m1 failed[0m[2m | [22m[<N>;<N>;<N>;<N>;94m1 passed[0m [2m(<N>)[22m
[1mTests[22m     [<N>;<N>;<N>;<N>;35m1 failed[0m[2m | [22m[<N>;<N>;<N>;<N>;94m1 passed[0m [2m(<N>)[22m
[1mTime[22m      <DURATION>
