headlamp_parity_tests/tests/parity_support/tests/snapshots/runner_parity/parity_suite_test__parity_support__runner_parity__selection_test_file_all_four.snap
---
source: headlamp_parity_tests/tests/parity_support/runner_parity.rs
assertion_line: 32
expression: canonical
---
[<N>;<N>;<N>;<N>;246m[97m RUN [39m[0m [2m<ROOT>[22m

[35mtests/a_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_a[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/a_test.<EXT>[39m
[2m───────────────────────────────────────────────────────────────────────────────────────────────────────[22m [<N>;<N>;<N>;<N>;35m[97m Failed Tests <N> [39m[0m

[1mTest Files[22m [<N>;<N>;<N>;<N>;94m1 passed[0m [2m(<N>)[22m
[1mTests[22m     [<N>;<N>;<N>;<N>;94m1 passed[0m [2m(<N>)[22m
[1mTime[22m      <DURATION>

